@@ -159,6 +159,7 @@
 	- rename rpm libraries to have version with libtool -release.
 	- fix: -i CLI context broken Yet Again.
 	- unlink all __db.nnn files before 1st db open.
+	- python bindings should not segfault when fed bad data.
 
 4.0 -> 4.0.2
 	- fix: avoid calling getpass twice as side effect of xstrdup macro
